added code for polyfill for bind

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         Call, Apply and Bind functions....
-        <script src="./call_apply_bind.js" async defer></script>
+        <!-- <script src="./call_apply_bind.js" async defer></script> -->
+        <script src="./polyfill_bind.js" async defer></script>
+        
     </body>
 </html>
