some more questions added

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
         <title>CALL, APPLY AND BIND</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./star_rating.css">
     </head>
-    <body>
+    <body style="box-sizing: border-box;">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        Call, Apply and Bind functions....
+        <div id="wrapper"></div>
         <!-- <script src="./call_apply_bind.js" async defer></script> -->
-        <script src="./polyfill_bind.js" async defer></script>
+        <!-- <script src="./polyfill_bind.js" async defer></script> -->
+        <script src="./scope.js" async defer></script>
         
     </body>
 </html>
